samples/_failures_safe/1761428623_e5e1fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b55be299.c: In function ‘main’:
./samples/SAFE/__tmp_b55be299.c:158:38: error: expected ‘)’ at end of input
  158 |         float ratio = 100.0f * (float
      |                                ~     ^
      |                                      )
./samples/SAFE/__tmp_b55be299.c:158:9: error: expected declaration or statement at end of input
  158 |         float ratio = 100.0f * (float
      |         ^~~~~
./samples/SAFE/__tmp_b55be299.c:158:9: error: expected declaration or statement at end of input
